Corrected spacing issue with mobile devices

--- a/src/components/posts/posts.css
+++ b/src/components/posts/posts.css
@@ -50,7 +50,7 @@ img {
     }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 768px) {
     .grid-div{
         grid-column: 1 / 4;
         padding-right: 20px;
